# platformer

./: .gitignore  .mcp.json  CMakeLists.txt  clear.sh  import.sh  mac.sh  readme.md  run.sh  run_claude.sh  run_debug.sh  run_offline.sh  run_record.sh  run_test.sh  run_web.sh
src/engine/core/: CMakeLists.txt  core_plugin.hpp
src/engine/core/ai/: CMakeLists.txt
src/engine/core/ai/src/: bt_asset.hpp  bt_component_serialization.hpp  bt_serialization_yaml.hpp  bt_system.hpp
src/engine/core/ai/test/: CMakeLists.txt  astar_test.cpp
src/engine/core/asset/: CMakeLists.txt
src/engine/core/asset/test/: CMakeLists.txt  asset_test.cpp
src/engine/core/fsm/src/: condition_registry.hpp  fsm_asset.hpp  register_core_actions.hpp  system_triggers.hpp  trigger_board.hpp
src/engine/core/src/ai/: bt_def.hpp
src/engine/core/src/asset/: asset_manager.hpp
src/engine/core/src/buffer/: render_buffer.hpp  render_buffer_component.hpp
src/engine/core/src/entity/: entity_serialization_yaml.hpp
src/engine/core/src/esc/: esc.hpp  esc_system_context.hpp  system_phase.hpp
src/engine/core/src/fsm/: action_registry.hpp  engine_context.hpp  fsm_asset_yaml.hpp  fsm_builder.hpp  fsm_controller.hpp  fsm_factory.hpp  project_config.hpp  register_core_actions.hpp
src/engine/core/src/guid/: guid.hpp
src/engine/core/src/plugin/: plugin.hpp  plugin_registrar.hpp  plugin_registry.hpp
src/engine/core/src/register/: esc_system_registry.hpp  fsm_action_registry.hpp  fsm_condition_registry.hpp
src/engine/core/src/resource/: resource_cache.hpp  resource_factory.hpp
src/engine/core/src/tag/: tag_component.hpp
src/engine/core/src/time/: time_component.hpp
src/engine/core/src/transform/: transform_component.hpp  transform_component_serialization_yaml.hpp
src/engine/core/src/window/: window_system.hpp
src/engine/core/test/: CMakeLists.txt  asset_test.cpp  astar_test.cpp  bt_test.cpp  guid_test.cpp
src/engine/examples/plugin_example/: CMakeLists.txt  example_plugin.cpp  example_plugin.hpp
src/engine/examples/plugin_example/src/: example_plugin.cpp
src/engine/examples/plugin_example/test/: CMakeLists.txt  plugin_registration_test.cpp
src/engine/guid/: CMakeLists.txt
src/engine/guid/src/: guid_generator.hpp
src/engine/guid/test/: CMakeLists.txt
src/engine/plugins/ai/: CMakeLists.txt  ai_plugin.cpp  ai_plugin.hpp
src/engine/plugins/ai/src/: ai_plugin.cpp  all_bt_node_types.hpp  bt_blackboard.hpp  bt_def.hpp  bt_executor.hpp  bt_node.hpp  bt_node_registry.hpp  bt_serialization_yaml.hpp  bt_system.hpp  register_ai_components.hpp  register_ai_systems.hpp
src/engine/plugins/animation/: CMakeLists.txt  animation_plugin.cpp  animation_plugin.hpp
src/engine/plugins/animation/src/: animation_plugin.cpp
src/engine/plugins/audio/: CMakeLists.txt  audio_plugin.cpp  audio_plugin.hpp
src/engine/plugins/audio/src/: audio_action_types.hpp  audio_data.hpp  audio_loader.hpp  audio_manager.hpp  audio_plugin.cpp  mute_audio_action.hpp  mute_audio_action_serialization.hpp  play_sound_action.hpp  play_sound_action_serialization.hpp  play_sound_action_serialization_yaml.hpp  play_sound_repeated_action.hpp  play_sound_repeated_action_serialization.hpp  register_audio_actions.hpp  register_audio_components.hpp  register_audio_systems.hpp
src/engine/plugins/bezier/: CMakeLists.txt  bezier_plugin.hpp
src/engine/plugins/bezier/src/: bezier_asset.hpp  bezier_asset_yaml.hpp  bezier_curve.hpp
src/engine/plugins/font/: CMakeLists.txt
src/engine/plugins/font/src/: font.hpp  font_loader.cpp  font_loader.hpp
src/engine/plugins/fsm/: CMakeLists.txt
src/engine/plugins/fsm/src/: all_action_types.hpp  fsm_asset_yaml.hpp  fsm_builder.hpp  fsm_data.hpp  fsm_factory.hpp  fsm_serialization.hpp
src/engine/plugins/guid/: CMakeLists.txt
src/engine/plugins/guid/src/: guid_yaml.hpp
src/engine/plugins/guid/test/: CMakeLists.txt  guid_test.cpp
src/engine/plugins/ik/: CMakeLists.txt  ik_plugin.cpp  ik_plugin.hpp
src/engine/plugins/ik/src/: ik_plugin.cpp
src/engine/plugins/math/: CMakeLists.txt
src/engine/plugins/math/src/: glm_vec_yaml.hpp
src/engine/plugins/mcp/: CMakeLists.txt
src/engine/plugins/mcp/src/: command_queue.hpp  mcp_server.cpp  mcp_server.hpp
src/engine/plugins/mesh_generator/: CMakeLists.txt  mesh_generator_plugin.hpp
src/engine/plugins/mesh_generator/src/: mesh_generator.hpp  meshgen_asset.hpp  meshgen_asset_yaml.hpp  meshgen_resource_generator.hpp
src/engine/plugins/navigation/: CMakeLists.txt  navigation_plugin.cpp  navigation_plugin.hpp
src/engine/plugins/navigation/src/: grid_navmesh.hpp  navigation_manager.cpp  navigation_manager.hpp  navigation_manager_component.hpp  navmesh_config.hpp  navmesh_config_yaml.hpp  (+6 more)
src/engine/plugins/prefab/: CMakeLists.txt
src/engine/plugins/profiler/: CMakeLists.txt
src/engine/plugins/project/: CMakeLists.txt
src/engine/plugins/renderer/: CMakeLists.txt  renderer_plugin.cpp  renderer_plugin.hpp
src/engine/plugins/scene/: CMakeLists.txt  scene_plugin.cpp  scene_plugin.hpp
src/engine/plugins/system/: CMakeLists.txt
src/engine/plugins/terminal/: CMakeLists.txt  terminal_plugin.hpp
src/engine/plugins/utlis/: CMakeLists.txt
src/engine/profiler/: CMakeLists.txt
src/engine/profiler/src/: profiler.hpp
src/engine/profiler/test/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/src/: register_game_components.hpp  register_game_systems.hpp
src/game/src/action/: health_bar_action.hpp  health_bar_action_serialization.hpp  health_check_action.hpp  health_check_action_serialization.hpp  health_display_action.hpp  health_display_action_serialization.hpp  register_game_actions.hpp
src/game/src/bone_attachment/: bone_attachment_component.hpp  bone_attachment_component_serialization.hpp  bone_attachment_component_serialization_yaml.hpp  bone_attachment_system.hpp
src/game/src/health/: health_system.hpp
src/game/src/player_controller/: player_controller_component.hpp  player_controller_system.hpp
src/game/src/shooting/: shooting_system.hpp
src/game/src/spawner/: spawner_component.hpp  spawner_system.hpp
(+1184 files in other folders)
